--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Club Oratoria - Dejando huella
-
-        </title>
+        <title>Club Oratoria - Dejando huella</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Free Website Template" name="keywords">
         <meta content="Free Website Template" name="description">
@@ -37,10 +35,10 @@
 
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav ml-auto">
-                        <a href="#home" class="nav-item nav-link active">Panda Home</a>
-                        <a href="#about" class="nav-item nav-link">About</a>
-                        <a href="#service" class="nav-item nav-link">Service</a>
-                        <a href="#experience" class="nav-item nav-link">Experience</a>
+                        <a href="#home" class="nav-item nav-link active">Home</a>
+                        <a href="#about" class="nav-item nav-link">Acerca</a>
+                        <a href="#service" class="nav-item nav-link">Servicio</a>
+                        <a href="#experience" class="nav-item nav-link">Experiencia</a>
                         <a href="#portfolio" class="nav-item nav-link">Portfolio</a>
                         <a href="#price" class="nav-item nav-link">Price</a>
                         <a href="#review" class="nav-item nav-link">Review</a>
@@ -61,14 +59,14 @@
                     <div class="col-sm-12 col-md-6">
                         <div class="hero-content">
                             <div class="hero-text">
-                                <p>I'm</p>
-                                <h1>Kate Winslet</h1>
+                                <p>Soy</p>
+                                <h1>Belén Torres</h1>
                                 <h2></h2>
                                 <div class="typed-text">Web Designer, Web Developer, Front End Developer, Apps Designer, Apps Developer</div>
                             </div>
                             <div class="hero-btn">
                                 <a class="btn" href="">Hire Me</a>
-                                <a class="btn" href="">Contact Me</a>
+                                <a class="btn" href="">Contactame Me</a>
                             </div>
                         </div>
                     </div>
@@ -100,7 +98,7 @@
                             </div>
                             <div class="about-text">
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida
+                                    Desde 2015 he coacheado y mentoreado a personas. Mi pasión es inspirar y potenciar el talento de líderes para que encuentren su voz y generen un impacto positivo.
                                 </p>
                             </div>
                             <div class="skills">
