--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <a href="#review" class="nav-item nav-link">Review</a>
                         <a href="#team" class="nav-item nav-link">Team</a>
                         <a href="#blog" class="nav-item nav-link">Blog</a>
-                        <a href="#contact" class="nav-item nav-link">Contact</a>
+                        <a href="#contact" class="nav-item nav-link">Contactame</a>
                     </div>
                 </div>
             </div>
