--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         <div class="experience" id="experience">
             <div class="container">
                 <header class="section-header text-center wow zoomIn" data-wow-delay="0.1s">
-                    <p>My Resume</p>
+                    <p>Mi CV</p>
                     <h2>Working Experience</h2>
                 </header>
                 <div class="timeline">
@@ -686,7 +686,7 @@
         <div class="blog" id="blog">
             <div class="container">
                 <div class="section-header text-center wow zoomIn" data-wow-delay="0.1s">
-                    <p>From Blog</p>
+                    <p>Blog</p>
                     <h2>Latest Articles</h2>
                 </div>
                 <div class="row">
