--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                 <div class="typed-text">Speaker, Coach de oradores, Mentora, Educadora y Tecnóloga </div>
                             </div>
                             <div class="hero-btn">
-                                <a class="btn" href="">Hire Me</a>
+                                <a class="btn" href="">Agendemos</a>
                                 <a class="btn" href="">Contactame Me</a>
                             </div>
                         </div>
@@ -93,8 +93,8 @@
                     <div class="col-lg-6">
                         <div class="about-content">
                             <div class="section-header text-left">
-                                <p>Learn About Me</p>
-                                <h2>10 Years Experience</h2>
+                                <p>Un poco sobre mí</p>
+                                <h2> Mi experiencia</h2>
                             </div>
                             <div class="about-text">
                                 <p>
@@ -103,7 +103,7 @@
                             </div>
                             <div class="skills">
                                 <div class="skill-name">
-                                    <p>Web Design</p><p>85%</p>
+                                    <p>Comunicación</p><p>95%</p>
                                 </div>
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
@@ -298,8 +298,8 @@
         <div class="portfolio" id="portfolio">
             <div class="container">
                 <div class="section-header text-center wow zoomIn" data-wow-delay="0.1s">
-                    <p>My Portfolio</p>
-                    <h2>My Excellent Portfolio</h2>
+                    <p>Mi Portfolio</p>
+                    <h2>Portfolio</h2>
                 </div>
                 <div class="row">
                     <div class="col-12">
@@ -388,7 +388,7 @@
         <div class="banner wow zoomIn" data-wow-delay="0.1s">
             <div class="container">
                 <div class="section-header text-center">
-                    <p>Awesome Discount</p>
+                    <p>Descuento</p>
                     <h2>Get <span>30%</span> Discount</h2>
                 </div>
                 <div class="container banner-text">
@@ -687,7 +687,7 @@
             <div class="container">
                 <div class="section-header text-center wow zoomIn" data-wow-delay="0.1s">
                     <p>Blog</p>
-                    <h2>Latest Articles</h2>
+                    <h2>Artículos</h2>
                 </div>
                 <div class="row">
                     <div class="col-lg-6">
@@ -757,7 +757,7 @@
                     </div>
                 </div>
                 <div class="container copyright">
-                    <p>&copy; <a href="#">Your Site Name</a>, All Right Reserved | Designed By <a href="https://htmlcodex.com">HTML Codex</a></p>
+                    <p>&copy; <a href="#">Club Oratoria</a>, All Right Reserved | Designed By <a href="https://htmlcodex.com">HTML Codex</a></p>
                 </div>
             </div>
         </div>
