--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             </div>
                             <div class="hero-btn">
                                 <a class="btn" href="">Agendemos</a>
-                                <a class="btn" href="">Contactame Me</a>
+                                <a class="btn" href="">Contáctame</a>
                             </div>
                         </div>
                     </div>
