--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Club de Oratoria - Belén Torres</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <title>Club Oratoria - Belén Torres</title>
+  <meta name="description" content="Soy Belén Torres, entrenadora de speakers y conferencista internacional. Ayudo a CEOs y líderes a mejorar su comunicación para hacer que sus ideas sean escuchadas con seguridad y claridad.">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
     :root {
-      --violet: #7F3FBF;
+      --violet: #9731E1; /* Color dominante */
       --light-violet: #EEE6F7;
       --dark: #1F1F1F;
       --gray: #666;
       --white: #FFFFFF;
+      --accent: #A6E128; /* Color de acento */
     }
 
     * {
@@ -21,8 +23,8 @@
     }
 
     body {
-      font-family: 'Inter', sans-serif;
-      background: var(--light-violet);
+      font-family: 'Poppins', sans-serif;
+      background: linear-gradient(135deg, #B388EB, #9731E1);
       color: var(--dark);
       line-height: 1.6;
       padding: 2rem;
@@ -34,13 +36,15 @@
     }
 
     header h1 {
-      font-size: 2.5rem;
-      color: var(--violet);
+      font-size: 3rem;
+      color: var(--white);
+      text-transform: uppercase;
+      letter-spacing: 2px;
     }
 
     header p {
       font-size: 1.2rem;
-      color: var(--gray);
+      color: var(--white);
     }
 
     section {
@@ -55,23 +59,23 @@
     h2 {
       color: var(--violet);
       margin-bottom: 1rem;
+      font-size: 2rem;
     }
 
     ul {
-      list-style: none;
-      padding-left: 1rem;
+      list-style-type: disc;
+      padding-left: 2rem;
     }
 
-    ul li::before {
-      content: "• ";
-      color: var(--violet);
+    ul li {
+      margin-bottom: 1rem;
     }
 
     footer {
       text-align: center;
       margin-top: 3rem;
       font-size: 0.9rem;
-      color: var(--gray);
+      color: var(--white);
     }
 
     a.button {
@@ -84,33 +88,70 @@
       text-decoration: none;
       font-weight: 600;
     }
+
+    a.button.accent {
+      background: var(--accent);
+    }
+
+    @media (max-width: 600px) {
+      body {
+        padding: 1rem;
+      }
+
+      header h1 {
+        font-size: 2rem;
+      }
+
+      header p {
+        font-size: 1rem;
+      }
+
+      section {
+        padding: 1.5rem;
+      }
+    }
   </style>
 </head>
 <body>
   <header>
-    <h1>Belén Torres</h1>
-    <p>Potencio tu voz para que impactes con tus ideas</p>
+    <h1>CLUB ORATORIA</h1>
+    <p>Potencia tu voz para impactar con tus ideas</p>
   </header>
 
   <section>
     <h2>Sobre mí</h2>
-    <p>Educadora, coach de oradores y mentora en tecnología. Formo parte de iniciativas como Singularity University, Roboteam y Women Game Jam. Mi propósito: ayudar a otras personas a expresarse con confianza y claridad.</p>
+    <p>Hola, soy <strong>Belén Torres</strong>, entrenadora de speakers y conferencista internacional. Mi misión es ayudarte a mejorar tu comunicación para que puedas expresar tus ideas con seguridad, claridad y poder de persuasión. Trabajamos juntos para que tu voz sea escuchada y tengas un impacto real en tu audiencia.</p>
   </section>
 
   <section>
     <h2>Qué hago</h2>
     <ul>
-      <li><strong>Talleres grupales</strong>: encuentros prácticos para fortalecer tus habilidades de comunicación.</li>
-      <li><strong>Sesiones uno a uno</strong>: acompañamiento personalizado para potenciar tus discursos.</li>
-      <li><strong>Mentoría en proyectos</strong>: guía en presentaciones y pitches de alto impacto.</li>
+      <li><strong>Talleres grupales</strong>: Encuentros prácticos donde trabajamos juntos para fortalecer tus habilidades de oratoria.</li>
+      <li><strong>Sesiones uno a uno</strong>: Acompañamiento personalizado para ayudarte a perfeccionar tus discursos y presentaciones.</li>
+      <li><strong>Mentoría en proyectos</strong>: Te guío en la preparación de pitches y presentaciones de alto impacto.</li>
     </ul>
-    <a href="mailto:belentorr28@gmail.com" class="button">Contactame</a>
+    <a href="mailto:informes@club-oratoria.com" class="button">Contáctame</a>
+  </section>
+
+  <section>
+    <h2>Testimonios</h2>
+    <ul>
+      <li><em>“Gracias a Belén, ahora me siento más confiada al hablar en público. Sus talleres son prácticos y efectivos.”</em> – Mariana G.</li>
+      <li><em>“Con su ayuda, preparé un pitch que me permitió abrir nuevas puertas. ¡Es una gran mentora!”</em> – Luis R.</li>
+      <li><em>“La claridad con la que enseña es impresionante. Sin dudas, es una referente en oratoria.”</em> – Ana P.</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Recursos gratuitos</h2>
+    <p>Accede a guías, plantillas y ejercicios para mejorar tu comunicación oral y preparar tus discursos. ¡Únete a nuestra comunidad de oradores y sigue aprendiendo!</p>
+    <a href="https://drive.google.com/drive/folders/1L2Y2pCMJh-bNntR_QjI4A4O5O2vvYXgA" class="button" target="_blank">Ver recursos</a>
   </section>
 
   <section>
     <h2>Contacto</h2>
-    <p>¿Querés saber más o trabajar conmigo? Escribime un mail o encontrame en <a href="https://www.linkedin.com/in/anahi-belen-torres/" target="_blank">LinkedIn</a>.</p>
-    <a href="mailto:belentorr28@gmail.com" class="button">Enviar mail</a>
+    <p>¿Te gustaría saber más o trabajar conmigo? Escríbeme un mail o encuéntrame en <a href="https://www.linkedin.com/in/anahi-belen-torres/" target="_blank">LinkedIn</a> o <a href="https://www.instagram.com/club_oratoria/" target="_blank">Instagram</a>.</p>
+    <a href="mailto:informes@club-oratoria.com" class="button accent">Enviar mail</a>
   </section>
 
   <footer>
