--- a/index.html
+++ b/index.html
@@ -3,17 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Club Oratoria - Belén Torres</title>
-  <meta name="description" content="Soy Belén Torres, entrenadora de speakers y conferencista internacional. Ayudo a CEOs y líderes a mejorar su comunicación para hacer que sus ideas sean escuchadas con seguridad y claridad.">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <title>Belén Torres - Coach de Oratoria y Speaker Internacional</title>
+  <meta name="description" content="Belén Torres es educadora, coach de oratoria y speaker internacional. Conferencista en Japón, Estados Unidos, Colombia y Nigeria. Potenciá tu voz con talleres y sesiones personalizadas.">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   <style>
     :root {
-      --violet: #9731E1; /* Color dominante */
+      --violet: #9731E1;
       --light-violet: #EEE6F7;
+      --green-accent: #A6E128;
       --dark: #1F1F1F;
       --gray: #666;
       --white: #FFFFFF;
-      --accent: #A6E128; /* Color de acento */
+      --pastel-bg: #F4F0FF;
     }
 
     * {
@@ -23,7 +25,7 @@
     }
 
     body {
-      font-family: 'Poppins', sans-serif;
+      font-family: 'Inter', sans-serif;
       background: linear-gradient(135deg, #B388EB, #9731E1);
       color: var(--dark);
       line-height: 1.6;
@@ -32,14 +34,12 @@
 
     header {
       text-align: center;
-      margin-bottom: 2rem;
+      margin-bottom: 1.5rem;
     }
 
     header h1 {
-      font-size: 3rem;
+      font-size: 2.5rem;
       color: var(--white);
-      text-transform: uppercase;
-      letter-spacing: 2px;
     }
 
     header p {
@@ -49,25 +49,21 @@
 
     section {
       max-width: 800px;
-      margin: 2rem auto;
-      background: var(--white);
+      margin: 1.5rem auto;
+      background: var(--pastel-bg);
       border-radius: 12px;
-      padding: 2rem;
+      padding: 1.5rem;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
     }
 
     h2 {
       color: var(--violet);
       margin-bottom: 1rem;
-      font-size: 2rem;
     }
 
     ul {
-      list-style-type: disc;
-      padding-left: 2rem;
-    }
-
-    ul li {
+      list-style: disc;
+      padding-left: 1.5rem;
       margin-bottom: 1rem;
     }
 
@@ -76,6 +72,9 @@
       margin-top: 3rem;
       font-size: 0.9rem;
       color: var(--white);
+      padding: 1rem;
+      background-color: var(--violet);
+      border-radius: 12px;
     }
 
     a.button {
@@ -89,8 +88,21 @@
       font-weight: 600;
     }
 
-    a.button.accent {
-      background: var(--accent);
+    .social-icons {
+      display: flex;
+      justify-content: center;
+      gap: 15px;
+      margin-top: 10px;
+    }
+
+    .social-icons a {
+      color: var(--white);
+      font-size: 2rem;
+      transition: color 0.3s;
+    }
+
+    .social-icons a:hover {
+      color: var(--green-accent);
     }
 
     @media (max-width: 600px) {
@@ -109,53 +121,72 @@
       section {
         padding: 1.5rem;
       }
+
+      .social-icons {
+        font-size: 1.5rem;
+      }
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>CLUB ORATORIA</h1>
-    <p>Potencia tu voz para impactar con tus ideas</p>
+    <h1>Club Oratoria</h1>
+    <p>Potencio tu voz para que impactes con tus ideas</p>
   </header>
 
   <section>
     <h2>Sobre mí</h2>
-    <p>Hola, soy <strong>Belén Torres</strong>, entrenadora de speakers y conferencista internacional. Mi misión es ayudarte a mejorar tu comunicación para que puedas expresar tus ideas con seguridad, claridad y poder de persuasión. Trabajamos juntos para que tu voz sea escuchada y tengas un impacto real en tu audiencia.</p>
+    <p>Soy Belén Torres, entrenadora de speakers y conferencista internacional. Mi misión es ayudarte a mejorar tu comunicación para que puedas expresar tus ideas con seguridad, claridad y poder de persuasión. Trabajamos juntos para que tu voz sea escuchada y tengas un impacto real en tu audiencia.</p>
+    <p><strong>Club Oratoria</strong> es un espacio donde practico junto a ti la habilidad de hablar en público con confianza, claridad y conexión. Juntos trabajamos para que puedas compartir tus ideas con impacto y generar una conexión auténtica con tu audiencia.</p>
   </section>
 
   <section>
     <h2>Qué hago</h2>
     <ul>
-      <li><strong>Talleres grupales</strong>: Encuentros prácticos donde trabajamos juntos para fortalecer tus habilidades de oratoria.</li>
-      <li><strong>Sesiones uno a uno</strong>: Acompañamiento personalizado para ayudarte a perfeccionar tus discursos y presentaciones.</li>
-      <li><strong>Mentoría en proyectos</strong>: Te guío en la preparación de pitches y presentaciones de alto impacto.</li>
+      <li><strong>Talleres grupales</strong>: encuentros prácticos para fortalecer tus habilidades de comunicación.</li>
+      <li><strong>Sesiones uno a uno</strong>: acompañamiento personalizado para potenciar tus discursos.</li>
+      <li><strong>Mentoría en proyectos</strong>: guía en presentaciones y pitches de alto impacto.</li>
     </ul>
-    <a href="mailto:informes@club-oratoria.com" class="button">Contáctame</a>
-  </section>
-
-  <section>
-    <h2>Testimonios</h2>
-    <ul>
-      <li><em>“Gracias a Belén, ahora me siento más confiada al hablar en público. Sus talleres son prácticos y efectivos.”</em> – Mariana G.</li>
-      <li><em>“Con su ayuda, preparé un pitch que me permitió abrir nuevas puertas. ¡Es una gran mentora!”</em> – Luis R.</li>
-      <li><em>“La claridad con la que enseña es impresionante. Sin dudas, es una referente en oratoria.”</em> – Ana P.</li>
-    </ul>
+    <a href="mailto:informes@club-oratoria.com" class="button">Contactame</a>
   </section>
 
   <section>
     <h2>Recursos gratuitos</h2>
     <p>Accede a guías, plantillas y ejercicios para mejorar tu comunicación oral y preparar tus discursos. ¡Únete a nuestra comunidad de oradores y sigue aprendiendo!</p>
-    <a href="https://drive.google.com/drive/folders/1L2Y2pCMJh-bNntR_QjI4A4O5O2vvYXgA" class="button" target="_blank">Ver recursos</a>
+    <ul>
+      <li><a href="https://drive.google.com/drive/folders/1SjxwIjWtvx-bnOsZ1UIAWx9U0nJ7itBV?usp=sharing" target="_blank" style="color: var(--violet); text-decoration: none;">Acceder a recursos gratuitos</a></li>
+    </ul>
   </section>
 
   <section>
-    <h2>Contacto</h2>
-    <p>¿Te gustaría saber más o trabajar conmigo? Escríbeme un mail o encuéntrame en <a href="https://www.linkedin.com/in/anahi-belen-torres/" target="_blank">LinkedIn</a> o <a href="https://www.instagram.com/club_oratoria/" target="_blank">Instagram</a>.</p>
-    <a href="mailto:informes@club-oratoria.com" class="button accent">Enviar mail</a>
+    <h2>Testimonios</h2>
+    <ul>
+      <li><em>“Belén me ayudó a encontrar mi voz y hablar con seguridad en público. Sus talleres son dinámicos y prácticos.”</em> – Mariana G.</li>
+      <li><em>“Gracias a sus sesiones, logré preparar un pitch que me abrió muchas puertas. ¡Es una gran mentora!”</em> – Luis R.</li>
+      <li><em>“La claridad y calidez con la que enseña es admirable. Una referente en oratoria.”</em> – Ana P.</li>
+    </ul>
   </section>
 
   <footer>
-    &copy; 2025 Belén Torres · Club de Oratoria
+    <p>¿Querés saber más o trabajar conmigo? Escribime un mail o encontrame en <a href="https://www.linkedin.com/in/anahi-belen-torres/" target="_blank" style="color: var(--white); text-decoration: none;">LinkedIn</a>, <a href="https://www.instagram.com/club_oratoria/" target="_blank" style="color: var(--white); text-decoration: none;">Instagram</a>, <a href="https://www.youtube.com/@club_oratoria" target="_blank" style="color: var(--white); text-decoration: none;">YouTube</a>, <a href="https://www.tiktok.com/@club_oratoria" target="_blank" style="color: var(--white); text-decoration: none;">TikTok</a> o <a href="https://open.spotify.com/user/31mnyw5b2mvjiozchbwhdtkuru6m?si=cb6b2130e67b4d95&nd=1&dlsi=ab44576c5e1542f5" target="_blank" style="color: var(--white); text-decoration: none;">Spotify</a>.</p>
+    <a href="mailto:informes@club-oratoria.com" class="button">Enviar mail</a>
+    <div class="social-icons">
+      <a href="https://www.linkedin.com/in/anahi-belen-torres/" target="_blank">
+        <i class="fab fa-linkedin"></i>
+      </a>
+      <a href="https://www.instagram.com/club_oratoria/" target="_blank">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <a href="https://www.youtube.com/@club_oratoria" target="_blank">
+        <i class="fab fa-youtube"></i>
+      </a>
+      <a href="https://www.tiktok.com/@club_oratoria" target="_blank">
+        <i class="fab fa-tiktok"></i>
+      </a>
+      <a href="https://open.spotify.com/user/31mnyw5b2mvjiozchbwhdtkuru6m?si=cb6b2130e67b4d95&nd=1&dlsi=ab44576c5e1542f5" target="_blank">
+        <i class="fab fa-spotify"></i>
+      </a>
+    </div>
   </footer>
 </body>
 </html>
