--- a/index.html
+++ b/index.html
@@ -130,29 +130,29 @@
 </head>
 <body>
   <header>
-    <h1>Club Oratoria</h1>
+    <h1>Club Oratoria | Belén Torres</h1>
     <p>Potencio tu voz para que impactes con tus ideas</p>
   </header>
 
   <section>
     <h2>Sobre mí</h2>
-    <p>Soy Belén Torres, entrenadora de speakers y conferencista internacional. Mi misión es ayudarte a mejorar tu comunicación para que puedas expresar tus ideas con seguridad, claridad y poder de persuasión. Trabajamos juntos para que tu voz sea escuchada y tengas un impacto real en tu audiencia.</p>
-    <p><strong>Club Oratoria</strong> es un espacio donde practico junto a ti la habilidad de hablar en público con confianza, claridad y conexión. Juntos trabajamos para que puedas compartir tus ideas con impacto y generar una conexión auténtica con tu audiencia.</p>
+    <p>Soy <strong>Belén Torres</strong> , entrenadora de speakers y conferencista internacional (Japón, Estados Unidos, Colombia, Nigeria). Mi misión es ayudarte a mejorar tu comunicación para que puedas expresar tus ideas con seguridad, claridad y poder de persuasión. Trabajamos juntos para que tu voz sea escuchada y tengas un impacto real en tu audiencia.</p>
+    <p><strong>Club Oratoria</strong> es un espacio donde practico junto a vos la habilidad de hablar en público con confianza, claridad y conexión. Juntos trabajamos para que puedas compartir tus ideas con impacto y generar una conexión auténtica con tu audiencia.</p>
   </section>
 
   <section>
-    <h2>Qué hago</h2>
+    <h2>¿Qué hago?</h2>
     <ul>
-      <li><strong>Talleres grupales</strong>: encuentros prácticos para fortalecer tus habilidades de comunicación.</li>
-      <li><strong>Sesiones uno a uno</strong>: acompañamiento personalizado para potenciar tus discursos.</li>
-      <li><strong>Mentoría en proyectos</strong>: guía en presentaciones y pitches de alto impacto.</li>
+      <li><strong>Talleres grupales</strong>: Encuentros prácticos para fortalecer tus habilidades de comunicación.</li>
+      <li><strong>Sesiones uno a uno</strong>: Acompañamiento personalizado para potenciar tus discursos.</li>
+      <li><strong>Mentoría en proyectos</strong>: Guía en presentaciones y pitches de alto impacto.</li>
     </ul>
     <a href="mailto:informes@club-oratoria.com" class="button">Contactame</a>
   </section>
 
   <section>
     <h2>Recursos gratuitos</h2>
-    <p>Accede a guías, plantillas y ejercicios para mejorar tu comunicación oral y preparar tus discursos. ¡Únete a nuestra comunidad de oradores y sigue aprendiendo!</p>
+    <p>Accede a guías, plantillas y ejercicios para mejorar tu comunicación oral y preparar tus discursos. ¡Unite a nuestra comunidad de oradores y seguí aprendiendo!</p>
     <ul>
       <li><a href="https://drive.google.com/drive/folders/1SjxwIjWtvx-bnOsZ1UIAWx9U0nJ7itBV?usp=sharing" target="_blank" style="color: var(--violet); text-decoration: none;">Acceder a recursos gratuitos</a></li>
     </ul>
